Update the stylesheet to show the explanation only when a quiz question is incorrect

--- a/biobank-plugin/public/css/biobank-public.css
+++ b/biobank-plugin/public/css/biobank-public.css
@@ -39,3 +39,11 @@
 	max-height: 30vh;
 	overflow: auto;
 }
+
+#biobank-quiz .biobank-question .biobank-quiz-question-explanation {
+	display: none;
+}
+
+#biobank-quiz .biobank-question.incorrect .biobank-quiz-question-explanation {
+	display: initial;
+}
