Hide the quiz by default

--- a/biobank-plugin/public/css/biobank-public.css
+++ b/biobank-plugin/public/css/biobank-public.css
@@ -40,6 +40,10 @@
 	overflow: auto;
 }
 
+#biobank-quiz {
+	display: none;
+}
+
 #biobank-quiz .biobank-question .biobank-quiz-question-explanation {
 	display: none;
 }
