--- a/biobank-plugin/admin/css/biobank-admin.css
+++ b/biobank-plugin/admin/css/biobank-admin.css
@@ -175,7 +175,7 @@
 	}
 
 	.biobank-side {
-		height: 300px;
+		height: 600px;
 		max-height: 70vh;
 		padding: 0 20px;
 		width: 50%;
@@ -304,8 +304,8 @@
 .biobank-side table {
 	box-sizing: border-box;
 	display: block;
-	height: calc(85% - 10px);
 	margin: 0 0 10px 0;
+	max-height: calc(85% - 10px);
 	position: relative;
 	width: 100%;
 }
