--- a/biobank-plugin/public/css/biobank-public.css
+++ b/biobank-plugin/public/css/biobank-public.css
@@ -36,7 +36,7 @@
 }
 
 .biobank-alert {
-	background-color: #cd2653;
+	background-color: #29bacc !important;
 	color: white;
 	font-weight: 400;
 	padding: 2rem;
@@ -105,7 +105,7 @@
 .checkbox,
 .radio {
 	background-color: white;
-	border: 3px solid #cd2653;
+	border: 3px solid #29bacc !important;
 	height: 25px;
 	left: 0;
 	position: absolute;
@@ -120,7 +120,7 @@
 
 .checkbox-container:hover input ~ .checkbox,
 .radio-container:hover input ~ .radio {
-	background-color: #cd2653;
+	background-color: #29bacc !important;
 }
 
 .radio-container:hover input:checked ~ .radio {
@@ -128,7 +128,7 @@
 }
 
 .checkbox-container input:checked ~ .checkbox {
-	background-color: #cd2653;
+	background-color: #29bacc !important;
 }
 
 .radio-container input:checked ~ .radio {
