--- a/biobank-plugin/public/css/biobank-public.css
+++ b/biobank-plugin/public/css/biobank-public.css
@@ -71,10 +71,17 @@
 
 .biobank-alert {
 	background-color: #29bacc !important;
+	border-radius: 10px;
 	color: white;
-	font-weight: 400;
-	padding: 2rem;
+    font-weight: 600;
 	margin: 2rem 0;
+	padding: 2rem;
+	text-align: center;
+}
+
+.biobank-alert::selection {
+	background-color: white;
+	color: #29bacc !important;
 }
 
 .biobank-hidden {
