--- a/biobank-plugin/public/css/biobank-public.css
+++ b/biobank-plugin/public/css/biobank-public.css
@@ -138,19 +138,40 @@
 #biobank-consent-trail .biobank-node .biobank-datetime {
 	display: table-cell;
 	padding: 0.75em 0;
+	position: relative;
 	text-align: center;
 }
 
+#biobank-consent-trail .biobank-node .biobank-datetime:before {
+	content: '';
+	border-left: 1px solid #999;
+	display: block;
+	height: 100%;
+	left: 50%;
+	opacity: 0.6;
+	position: absolute;
+	top: 0;
+	z-index: -1;
+}
+
+#biobank-consent-trail .biobank-node .biobank-date,
+#biobank-consent-trail .biobank-node .biobank-time {
+	background-color: white;
+}
+
 #biobank-consent-trail .biobank-node .biobank-date {
-	font-size: 0.8em;
+	font-size: 0.7em;
 	font-weight: 600;
+	line-height: 1.15;
+	padding-top: 0.5em;
 	text-transform: uppercase;
 }
 
 #biobank-consent-trail .biobank-node .biobank-time {
-	font-size: 0.85em;
+	font-size: 0.75em;
 	font-weight: 400;
 	line-height: 1;
+	padding-bottom: 0.5em;
 }
 
 #biobank-consent-trail .biobank-node .biobank-consent-change {
