--- a/biobank-plugin/public/css/biobank-public.css
+++ b/biobank-plugin/public/css/biobank-public.css
@@ -240,12 +240,20 @@
 	cursor: pointer;
 	display: block;
 	margin-bottom: 12px;
-	padding-left: 35px;
 	position: relative;
 	-webkit-user-select: none;
 	-moz-user-select: none;
 	-ms-user-select: none;
 	user-select: none;
+}
+
+.checkbox-container {
+	padding-left: 35px;
+}
+
+.radio-container {
+	display: inline-block;
+	margin: 1em 1em;
 }
 
 .checkbox-container input,
@@ -257,8 +265,7 @@
 	width: 0;
 }
 
-.checkbox,
-.radio {
+.checkbox {
 	background-color: white;
 	box-sizing: border-box;
 	border: 3px solid #29bacc;
@@ -270,13 +277,59 @@
 	width: 25px;
 }
 
-.radio {
-	border-radius: 50%;
+.radio-container input ~ .radio {
+	border: 1px solid #edeff1;
+	border-radius: 10px;
+	color: #697d87;
+    display: block;
+	font-size: 18px;
+    font-family: "Gotham-Medium";
+	padding: 6px 40px;
+    text-align: center;
+    width: 60px;
+}
+
+.radio-container input:checked ~ .radio {
+	background-color: #29bacc;
+	color: white;
+}
+
+.radio:before {
+	content: '';
+    position: absolute;
+    top: 50%;
+    transform: translatey(-50%);
+    left: 14px;
+    height: 20px;
+    width: 20px;
+    border: 2px solid #edeff1;
+}
+
+.radio:after {
+	border: solid white;
+    border-width: 0 3px 3px 0;
+	color: white;
+	content: "";
+	display: none;
+	font-weight: 900;
+	height: 9px;
+	left: 22px;
+	position: absolute;
+	top: 11px;
+	-webkit-transform: rotate(45deg);
+    -ms-transform: rotate(45deg);
+    transform: rotate(45deg);
+	width: 5px;
+}
+
+.radio-container input:checked ~ .radio:after {
+	display: initial;
 }
 
 .checkbox-container:hover input ~ .checkbox,
 .radio-container:hover input ~ .radio {
 	background-color: #29bacc !important;
+	color: white;
 }
 
 .radio-container:hover input:checked ~ .radio {
@@ -285,10 +338,6 @@
 
 .checkbox-container input:checked ~ .checkbox {
 	background-color: #29bacc !important;
-}
-
-.radio-container input:checked ~ .radio {
-	border-width: 7.5px;
 }
 
 .checkbox:after {
