--- a/biobank-plugin/public/css/biobank-public.css
+++ b/biobank-plugin/public/css/biobank-public.css
@@ -20,7 +20,7 @@
 @media only screen and (max-width: 1023px) {
 
 	#biobank-consent-trail .biobank-datetime {
-		width: 10%;
+		width: 20%;
 	}
 
 }
@@ -28,7 +28,7 @@
 @media only screen and (max-width: 480px) {
 
 	#biobank-consent-trail .biobank-datetime {
-		width: 15%;
+		width: 30%;
 	}
 
 }
@@ -151,21 +151,44 @@
 	text-align: center;
 }
 
+#biobank-consent-trail .biobank-node:first-child .biobank-datetime:before {
+	height: 50%;
+	top: 50%;
+}
+
+#biobank-consent-trail .biobank-node:last-child .biobank-datetime:before {
+	height: 50%;
+}
+
 #biobank-consent-trail .biobank-node .biobank-datetime:before {
+	background-color: white;
 	content: '';
-	border-left: 1px solid #999;
-	display: block;
+	border-right: 1px solid #999;
 	height: 100%;
-	left: 50%;
+	margin-right: 6px;
 	opacity: 0.6;
 	position: absolute;
+	right: -1px;
 	top: 0;
 	z-index: -1;
 }
 
+#biobank-consent-trail .biobank-node .biobank-datetime:after {
+	background-color: white;
+	content: '';
+	border: 1px solid rgba(153, 153, 153, 0.6);
+	border-radius: 50%;
+	height: 10px;
+	margin-right: 6px;
+	position: absolute;
+	right: -6px;
+	width: 10px;
+	top: calc(50% - 6px);
+	z-index: 1;
+}
+
 #biobank-consent-trail .biobank-node .biobank-date,
 #biobank-consent-trail .biobank-node .biobank-time {
-	background-color: white;
 }
 
 #biobank-consent-trail .biobank-node .biobank-date {
@@ -200,7 +223,7 @@
 	position: absolute;
 	top: 0;
 	width: 100%;
-	z-index: -1;
+	z-index: -2;
 }
 
 #biobank-consent-trail .biobank-node .biobank-consent-change span {
